<resources>
    <string name="app_name">Wired Orthodontics</string>

    <string-array name="id_choices_array">
        <item>Driving License</item>
        <item>State ID</item>
        <item>Passport</item>
    </string-array>

    <string name="start">Start</string>
    <string name="getting_started">Getting Started</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="your_info">Your Info</string>
    <string name="select_a_date">Select a date...</string>
    <string name="available_times">Available Times for</string>
    <string name="patient_name">Patient Name</string>
    <string name="schedule_my_appointment">Schedule My Appointment</string>
    <string name="address">Address</string>
    <string name="id_hint">ID Number</string>
    <string name="clinic_source">How did you hear about us?</string>
    <string name="description_hint">Reason for visit</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="null_error_alert">Please select a date, time, and fill in all fields before scheduling.</string>
    <string name="unknown_error">An unknown error has occurred.\nPlease try again</string>
</resources>